# claude-code-model

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: multi_agent.py  multi_agent_comparison.py  simple.py  with_tools.py
src/claude_code_model/: __init__.py  cli.py  model.py
tests/: test_cli.py  test_model.py  test_parsing.py
