[project]
name = "claude-code-model"
version = "0.2.1"
description = "Pydantic AI model adapter for Claude Code CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Alex Bogdanov", email = "alex@bogdanov.wtf"},
]
keywords = ["claude", "pydantic-ai", "llm", "agent", "anthropic", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic-ai>=1.48.0",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/aleksandr-bogdanov/claude-code-model"
Repository = "https://github.com/aleksandr-bogdanov/claude-code-model"
Issues = "https://github.com/aleksandr-bogdanov/claude-code-model/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_model"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 88
